<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_loggin">Login</string>
    <string name="donthaveaccount">No tienes cuenta?, </string>
    <string name="create_here"> crea una aqui</string>
    <string name="hint_email">Correo</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="text_button_createaccount">Unete</string>
    <string name="toolbar_title_createaccount">Crea tu Cuenta</string>
    <string name="username_card">Uriel Ramirez</string>
    <string name="firstword_card">Hace</string>
    <string name="time_card">4 dias</string>
    <string name="likenumber_card">10 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_profile">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">Me Gusta</string>
    <string name="titleimage">\"Todo Copas en la Playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mi dolor, egestas ac felis eget, vulputate pulvinar libero. Cras eu bibendum lectus. Duis eleifend lorem consectetur nisi congue, sit amet volutpat felis porta. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer sollicitudin leo risus, vel euismod metus rhoncus sit amet. Sed tempus tellus ac euismod sagittis. Fusce in sapien vestibulum, imperdiet enim ut, tempus lorem. Nunc at volutpat elit. Donec nec sapien et ligula pharetra tincidunt ut eu augue.  Nunc at odio nunc. Etiam tempor diam sit amet odio feugiat pharetra. Praesent lacinia tortor interdum tortor ultrices, ut tincidunt tortor euismod. Morbi porta nunc faucibus sollicitudin malesuada. Vivamus ac magna metus. Curabitur elementum dignissim magna eu aliquam. Quisque a suscipit urna, sit amet fringilla ante. Vivamus posuere mi quis viverra posuere. Sed pulvinar metus eget mauris venenatis sagittis.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
